--- a/client/contacts/contacts.html
+++ b/client/contacts/contacts.html
@@ -89,6 +89,7 @@
 			<option>вопрос по продукту</option>
 			<option>сотрудничество</option>
 			<option>вопрос по услугам</option>
+			<option>сообщение по соответствию заказа/качеству/заводскому браку</option>
 			<option>другое</option>
 		</select>
 		<br><br>
