--- a/client/header/header.html
+++ b/client/header/header.html
@@ -41,7 +41,7 @@
 			<button class="mob_menu_button">Меню</button>
 		</div>
 		<ul>
-			<li><a class="menu_link" href="/">НОВОСТИ</a></li>
+			<li><a class="menu_link" href="/news">НОВОСТИ</a></li>
 			<li><a class="menu_link" href="/about">О КОМПАНИИ</a></li>
 			<li>
 				<a class="biomodels_a" href="#">БИОМОДЕЛИ&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>
@@ -87,6 +87,7 @@
 			<li><a class="admin_link" href="/orders">заказы</a></li>
 			<li><a class="admin_link" href="/cforms">контактные формы</a></li>
 			<li><a class="admin_link" href="/users">пользователи</a></li>
+			<li><a class="admin_link" href="/newsletter">рассылка новостей</a></li>
 		</ul>
 	</div>
 
