--- a/client/login/login.html
+++ b/client/login/login.html
@@ -72,7 +72,7 @@
 			<p>Имя:<br> <input type="text" name="firstName"></p>
 			<p>Отчество:<br> <input type="text" name="secondName"></p>
 			<p>Email:<br> <input type="email" name="email"></p>
-			<label>Подписаться на рассылку новостей Simex: <input type="checkbox" name="newsletter" style="width: 5%;"></label>
+			<label>Подписаться на рассылку новостей Simex: <input type="checkbox" name="newsletter" style="width: 5%;" {{newsletter}}></label>
 			<p>Адрес:<br> <input type="text" name="address"></p>
 			<p>Пароль:<br> <input id="password" type="password" name="password"></p>
 			<span class="login_error">Не совпадают!</span>
