--- a/client/admin/newsletter/newsletter.html
+++ b/client/admin/newsletter/newsletter.html
@@ -1,9 +1,13 @@
 <template name="newsletter">
 
-	<section id="newsletter">
-		<h2>Список email пользователей, подписавшихся на рассылку новостей:</h2>
-		<p id="emails">{{#each users}}{{emails.[0].address}}&nbsp;{{/each}}</p>
-		<button id="copy">Копировать</button>
-	</section>
+	{{#if Template.subscriptionsReady}}
+		<section id="newsletter">
+			<h2>Список email пользователей, подписавшихся на рассылку новостей:</h2>
+			<p id="emails">{{#each users}}{{emails.[0].address}}&nbsp;{{/each}}</p>
+			<button id="copy">Копировать</button>
+		</section>
+	{{else}}
+		{{> loader}}
+	{{/if}}
 
 </template>
