--- a/client/about/about.html
+++ b/client/about/about.html
@@ -1,12 +1,16 @@
 <template name="about">
 
-	<section class="about">
-		<h2>{{> editableText context=about options=optionsHelper field="title"}}</h2>
-		<p>{{> editableText context=about options=optionsHelper field="text"}}</p>
-		<div>
-			<h3>{{> editableText context=about options=optionsHelper field="quote.person"}}</h3>
-			<p>{{> editableText context=about options=optionsHelper field="quote.text"}}</p>
-		</div>
-	</section>
+	{{#if Template.subscriptionsReady }}
+		<section class="about">
+			<h2>{{> editableText context=about options=optionsHelper field="title"}}</h2>
+			<p>{{> editableText context=about options=optionsHelper field="text"}}</p>
+			<div>
+				<h3>{{> editableText context=about options=optionsHelper field="quote.person"}}</h3>
+				<p>{{> editableText context=about options=optionsHelper field="quote.text"}}</p>
+			</div>
+		</section>
+	{{else}}
+		{{> loader}}
+	{{/if}}
 
 </template>
