--- a/client/start/start.html
+++ b/client/start/start.html
@@ -3,24 +3,34 @@
 	<section id="start">
 
 		<div id="start_img"></div>
-		<h2>Откройте для себя биологические тренажеры!</h2>
-		{{#if admin}}
-			<h1 class="add_item"><i class="fa fa-plus-square" aria-hidden="true"></i>&nbsp;Добавить</h1>
-			{{#if add_item}}
-				<section class="new_item">
-					<input type="text" name="title" placeholder="Заголовок">
-					<br>
-					<input type="text" name="description" placeholder="Описание">
-					<br>
-					<input type="text" name="photo" placeholder="URL фотографии">
-					<br>
-					<button class="save_item">Сохранить</button>
-				</section>
+
+		{{#unless Template.subscriptionsReady}}
+
+			{{> loader}}
+
+		{{else}}
+
+			<h2>{{> editableText context=heading options=optionsHelper }}</h2>
+			{{#if admin}}
+				<h1 class="add_item"><i class="fa fa-plus-square" aria-hidden="true"></i>&nbsp;Добавить</h1>
+				{{#if add_item}}
+					<section class="new_item">
+						<input type="text" name="title" placeholder="Заголовок">
+						<br>
+						<input type="text" name="description" placeholder="Описание">
+						<br>
+						<input type="text" name="photo" placeholder="URL фотографии">
+						<br>
+						<button class="save_item">Сохранить</button>
+					</section>
+				{{/if}}
 			{{/if}}
-		{{/if}}
-		{{#each item in items}}
-			{{> start_item item=item}}
-		{{/each}}
+			{{#each item in items}}
+				{{> start_item item=item}}
+			{{/each}}
+
+		{{/unless}}
+
 		<div style="clear: both;"></div>
 		{{#unless currentUser}}
 			<section id="register_now">
